--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "ionicons": "^7.4.0",
     "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-config": "^1.5.3",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.18.1",
     "react-native-heroicons": "^4.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
@@ -30,13 +34,16 @@
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^15.5.0"
+    "react-native-svg": "^15.6.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/lodash": "^4.17.7",
     "@types/react": "~18.2.45",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.1.3"
   },
   "private": true
